# KHeritageAPI

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  build.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
kheritageapi/: __init__.py  api.py  heritage.py  models.py  palace.py  t_utils.py  utils.py
tests/: test_clients_and_exports.py  test_http_contracts.py  test_models.py
tests/fixtures/: event_current.xml  heritage_detail.xml  heritage_list.xml  heritage_video.xml  palace_list.xml
